--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ torch==1.11.0+cpu
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torchvision==0.12.0+cpu
 django-cors-headers==3.13.0
+gunicorn==20.1.0
