--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,13 @@ torch==1.11.0+cpu
 torchvision==0.12.0+cpu
 django-cors-headers==3.13.0
 gunicorn==20.1.0
+seaborn==0.12.0
+requests==2.28.1
+matplotlib==3.6.0
+numpy==1.23.3
+opencv-python==4.6.0.66
+pandas==1.5.0
+PyYAML==6.0
+requests==2.28.1
+scipy==1.9.1
+tqdm==4.64.1
