--- a/static/ultralytics_yolov5_master/.gitignore
+++ b/static/ultralytics_yolov5_master/.gitignore
@@ -65,7 +65,7 @@ yolov3-tiny.conv.15
 
 # GitHub Python GitIgnore ----------------------------------------------------------------------------------------------
 # Byte-compiled / optimized / DLL files
-__pycache__/
+#__pycache__/
 *.py[cod]
 *$py.class
 
