--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-Pillow==9.2.0
 Django==4.1.1
+django_environ==0.9.0
+djangorestframework_simplejwt==5.2.1
+environ==1.0
+mysql_connector_repackaged==0.3.1
+Pillow==9.2.0
+PyMySQL==1.0.2
 djangorestframework==3.14.0
 Pillow==9.2.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
