--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,8 @@ gunicorn==20.1.0
 seaborn==0.12.0
 requests==2.28.1
 numpy==1.23.3
-#matplotlib==3.6.0
+mysql-connector-python==8.0.30
+matplotlib==3.6
 opencv-python==4.6.0.66
 pandas==1.5.0
 PyYAML==6.0
